[gd_scene load_steps=18 format=3 uid="uid://ba8p40n5btqsk"]

[ext_resource type="Script" path="res://screens/game/game_logic.gd" id="1_677oh"]
[ext_resource type="PackedScene" uid="uid://ckclcfxxs1obv" path="res://objects/market/market.tscn" id="1_765yv"]
[ext_resource type="Script" path="res://objects/upskill/upskill.gd" id="2_15457"]
[ext_resource type="PackedScene" uid="uid://dv73rqal2aqgs" path="res://objects/employee/employee.tscn" id="3_2v47i"]
[ext_resource type="Script" path="res://objects/employee/external/external.gd" id="3_777w0"]
[ext_resource type="PackedScene" uid="uid://cfncrhmusammc" path="res://objects/internal/hire-fire.tscn" id="4_fudho"]
[ext_resource type="PackedScene" uid="uid://ylhyi4m5tx7d" path="res://objects/menu/slots/slots_menu.tscn" id="5_qob7v"]
[ext_resource type="PackedScene" uid="uid://ip43o7ukforf" path="res://objects/internal/internal.tscn" id="5_yd8vj"]
[ext_resource type="PackedScene" uid="uid://goh2wnysibo4" path="res://objects/employee/external/external.tscn" id="7_aarp8"]
[ext_resource type="Script" path="res://objects/internal/fire_only.gd" id="9_adpjf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vdyj0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4md2u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4hhv6"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.0666667, 0.466667, 0.588235, 1)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w06va"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.164706, 0.490196, 0.294118, 1)
corner_detail = 6
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iduvf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dfi7y"]
bg_color = Color(0.164706, 0.490196, 0.294118, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iefxg"]

[node name="MainScreen_control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_677oh")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.164706, 0.196078, 0.211765, 1)

[node name="MeepleMenu" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -150.0
offset_right = 960.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 24
alignment = 1

[node name="External" parent="MeepleMenu" instance=ExtResource("5_qob7v")]
layout_mode = 2
size_flags_vertical = 8
NAME = "External Experts"
TYPE = 1
EMPTY_SLOTS = false
MEEPLE_levels = Array[int]([5, 5, 10])

[node name="Internal" parent="MeepleMenu" instance=ExtResource("5_qob7v")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
NAME = "UNUTILIZED EMPLOYEES"
EMPTY_SLOTS = false
MEEPLE_levels = Array[int]([0, 1, 1, 2, 2, 3])

[node name="External_old" parent="MeepleMenu" instance=ExtResource("7_aarp8")]
visible = false
layout_mode = 2
size_flags_vertical = 8
script = ExtResource("3_777w0")

[node name="Internal_old" parent="MeepleMenu" instance=ExtResource("5_yd8vj")]
visible = false
layout_mode = 2
size_flags_vertical = 8

[node name="Fired" parent="MeepleMenu" instance=ExtResource("5_qob7v")]
layout_mode = 2
size_flags_vertical = 8
NAME = "Fired"
MEEPLE_levels = Array[int]([0, 0, 0])

[node name="Fired_old" parent="MeepleMenu" instance=ExtResource("7_aarp8")]
visible = false
layout_mode = 2
size_flags_vertical = 8

[node name="Name" parent="MeepleMenu/Fired_old" index="0"]
text = "Fired"

[node name="Expert1" parent="MeepleMenu/Fired_old/Slots" index="0"]
min_level = 0
allowed_type = 0
meeple_level = -1

[node name="Expert2" parent="MeepleMenu/Fired_old/Slots" index="1"]
allowed_type = 0
meeple_level = -1

[node name="Expert3" parent="MeepleMenu/Fired_old/Slots" index="2"]
allowed_type = 0
meeple_level = -1

[node name="Expert4" parent="MeepleMenu/Fired_old/Slots" index="3"]
visible = false
meeple_level = 1

[node name="Fire_only" type="PanelContainer" parent="MeepleMenu"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxEmpty_vdyj0")
script = ExtResource("9_adpjf")

[node name="BG_Color_Top" type="ColorRect" parent="MeepleMenu/Fire_only"]
visible = false
custom_minimum_size = Vector2(0, 132)
layout_mode = 2
size_flags_vertical = 0
color = Color(0.301961, 0.301961, 0.301961, 1)

[node name="BG_Color" type="ColorRect" parent="MeepleMenu/Fire_only"]
visible = false
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_vertical = 8
color = Color(0.255659, 0.255659, 0.255659, 1)

[node name="CentralPanel" type="VBoxContainer" parent="MeepleMenu/Fire_only"]
layout_mode = 2

[node name="Intern_expenses_label" type="Label" parent="MeepleMenu/Fire_only/CentralPanel"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 1
text = "Fire"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Expenses_value" type="Label" parent="MeepleMenu/Fire_only/CentralPanel"]
unique_name_in_owner = true
visible = false
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 1
text = "PRICE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Employees" type="HBoxContainer" parent="MeepleMenu/Fire_only/CentralPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 4
alignment = 1

[node name="MainMenu" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.4
offset_left = -562.0
offset_top = -250.0
offset_right = 562.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="Hire" parent="MainMenu/VBoxContainer" instance=ExtResource("4_fudho")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8

[node name="External" parent="MainMenu/VBoxContainer" instance=ExtResource("7_aarp8")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="Education" type="PanelContainer" parent="MainMenu/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_4md2u")
script = ExtResource("2_15457")

[node name="BG_Color_Top" type="ColorRect" parent="MainMenu/VBoxContainer/Education"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 132)
layout_mode = 2
size_flags_vertical = 0
color = Color(0.301961, 0.301961, 0.301961, 1)

[node name="BG_Color" type="ColorRect" parent="MainMenu/VBoxContainer/Education"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_vertical = 8
color = Color(0.255659, 0.255659, 0.255659, 1)

[node name="CentralPanel" type="VBoxContainer" parent="MainMenu/VBoxContainer/Education"]
layout_mode = 2

[node name="Upskill" type="Label" parent="MainMenu/VBoxContainer/Education/CentralPanel"]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 1
text = "   Training 300, UPSkill +1"
vertical_alignment = 1
uppercase = true

[node name="Fee_value" type="Label" parent="MainMenu/VBoxContainer/Education/CentralPanel"]
unique_name_in_owner = true
visible = false
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 1
text = "PRICE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Posibilities" type="HBoxContainer" parent="MainMenu/VBoxContainer/Education/CentralPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 4
alignment = 1

[node name="Employee" parent="MainMenu/VBoxContainer/Education/CentralPanel/Posibilities" instance=ExtResource("3_2v47i")]
layout_mode = 2

[node name="Employee2" parent="MainMenu/VBoxContainer/Education/CentralPanel/Posibilities" instance=ExtResource("3_2v47i")]
layout_mode = 2

[node name="Employee3" parent="MainMenu/VBoxContainer/Education/CentralPanel/Posibilities" instance=ExtResource("3_2v47i")]
layout_mode = 2

[node name="Employee4" parent="MainMenu/VBoxContainer/Education/CentralPanel/Posibilities" instance=ExtResource("3_2v47i")]
layout_mode = 2

[node name="Upskill_value" type="Label" parent="MainMenu/VBoxContainer/Education/CentralPanel"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 3
text = "---"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Upskill_label" type="Label" parent="MainMenu/VBoxContainer/Education/CentralPanel/Upskill_value"]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_right = -148.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
text = "Expenses:"
vertical_alignment = 1
uppercase = true

[node name="Upskill_label2" type="Label" parent="MainMenu/VBoxContainer/Education/CentralPanel/Upskill_value"]
visible = false
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_right = -148.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
text = "Upskill expenses:"
vertical_alignment = 1
uppercase = true

[node name="Market" parent="MainMenu" instance=ExtResource("1_765yv")]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 500)
layout_mode = 2
size_flags_horizontal = 1

[node name="StatusBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.75
anchor_right = 0.5
anchor_bottom = 0.75
offset_left = -960.0
offset_top = -20.0
offset_right = 960.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4

[node name="Money_container" type="PanelContainer" parent="StatusBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_4hhv6")

[node name="ColorRect" type="ColorRect" parent="StatusBar/Money_container"]
visible = false
layout_mode = 2
color = Color(0.0666667, 0.466667, 0.588235, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="StatusBar/Money_container"]
layout_mode = 2

[node name="Money" type="Label" parent="StatusBar/Money_container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "MONEY:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Money_value" type="Label" parent="StatusBar/Money_container/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "3500"
vertical_alignment = 1

[node name="ProfitLoss_container" type="PanelContainer" parent="StatusBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_styles/panel = SubResource("StyleBoxFlat_w06va")

[node name="ColorRect" type="ColorRect" parent="StatusBar/ProfitLoss_container"]
visible = false
layout_mode = 2
color = Color(0.164706, 0.490196, 0.294118, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="StatusBar/ProfitLoss_container"]
layout_mode = 2

[node name="Profit-Loss" type="Label" parent="StatusBar/ProfitLoss_container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "PROFIT/LOSS:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Profit-Loss_value" type="Label" parent="StatusBar/ProfitLoss_container/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "3500"
vertical_alignment = 1

[node name="Fired_container" type="PanelContainer" parent="StatusBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="StatusBar/Fired_container"]
layout_mode = 2
color = Color(0.588235, 0.403922, 0.0666667, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="StatusBar/Fired_container"]
layout_mode = 2

[node name="Fired" type="Label" parent="StatusBar/Fired_container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "FIRED EMPLOYEES:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fired_value" type="Label" parent="StatusBar/Fired_container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "12"
vertical_alignment = 1

[node name="NextButton" type="Button" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -32.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_iduvf")
theme_override_styles/hover = SubResource("StyleBoxFlat_dfi7y")
theme_override_styles/pressed = SubResource("StyleBoxFlat_iefxg")
theme_override_styles/normal = SubResource("StyleBoxFlat_dfi7y")
action_mode = 0
shortcut_feedback = false
shortcut_in_tooltip = false
text = "D O N E
"
icon_alignment = 1

[node name="Rounds" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_right = 160.0
offset_bottom = 66.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Steps" type="Label" parent="Rounds"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "ROUND:"
horizontal_alignment = 1

[node name="Steps_value" type="Label" parent="Rounds"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "1/15"
horizontal_alignment = 1

[node name="Main_sound" type="AudioStreamPlayer" parent="."]
volume_db = -5.0

[node name="EndScreen" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="EndScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.301961, 0.301961, 0.301961, 0.898039)

[node name="PanelContainer" type="PanelContainer" parent="EndScreen/Background"]
custom_minimum_size = Vector2(320, 128)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="EndLabel" type="Label" parent="EndScreen/Background/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "CONGRATULATION!
YOUR SCORE IS:
"
horizontal_alignment = 1
uppercase = true

[node name="Button2" type="Button" parent="EndScreen/Background/PanelContainer/EndLabel"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
offset_left = 2.0
offset_top = 113.0
offset_right = 322.0
offset_bottom = 173.0
grow_vertical = 2
pivot_offset = Vector2(10, 0)
text = "TRY AGAIN"

[connection signal="pressed" from="NextButton" to="." method="_on_next_phase_button_pressed"]
[connection signal="pressed" from="EndScreen/Background/PanelContainer/EndLabel/Button2" to="." method="_on_reset_pressed"]

[editable path="MeepleMenu/Fired_old"]
